2001-05-18  Bart Schaefer  <schaefer@zsh.org>

	* unposted: Test/.distfiles, Test/V01zmodload.ztst: Add the basic
	tests of zmodload functionality.

2001-05-18  Clint Adams  <clint@zsh.org>

	* 14378: Completion/Unix/Type/_tex: also work for
	pdflatex, jadetex, and pdfjadetex.

2001-05-17  Tanaka Akira  <akr@zsh.org>

	* 14377: Completion/Unix/Command/_cvs: support new .cvspass format
	introduced by cvs-1.11.1.

2001-05-17  Peter Stephenson  <pws@csr.com>

	* 14376: Completion/Unix/Command/_lp: type with compset.

2001-05-17  Bart Schaefer  <schaefer@zsh.org>

	* 14375: Src/Zle/zle_main.c: Permit signals to be handled during
	read from the terminal in zleread().  (This changes only nested
	calls from widgets such as incremental search; signals were never
	queued for top-level reads.)

2001-05-16  Clint Adams  <clint@zsh.org>

	* 14361, 14362: Completion/Unix/Command/_modutils: use
	state for modprobe so that modprobe -r will
	complete multiple loaded modules.  Also
	handle more of modprobe's options.

2001-05-16  Sven Wischnowsky  <wischnow@zsh.org>

	* 14359: Src/Zle/zle_tricky.c: more fixage for expansion: just
	convert the command line to the original when expansion
	shouldn't or couldn't do something sensible on the line

2001-05-15  Wayne Davison  <wayned@users.sourceforge.net>

	* 14357: Src/hashtable.c, Src/hist.c, Src/zsh.h, Doc/Zsh/options.yo:
	Added a "delayed drop" for ignored history entries.

2001-05-15  Oliver Kiddle  <opk@zsh.org>

	* 14355: Completion/Unix/Command/_modutils: fix bug where /sbin/lsmod
	was redirected in instead of being run

2001-05-15  Sven Wischnowsky  <wischnow@zsh.org>

	* 14350: Completion/Base/Completer/_expand, Src/Zle/zle_tricky.c:
	don't remove single and double quotes that are inside parameter
	expansions; hopefully better handling of brace expansions in
	_expand

2001-05-15  Peter Stephenson  <pws@csr.com>

	* 14348: Src/builtin.c: some idiot forgot to make GLOBAL_EXPORT
	work with typeset -g.
